methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:10: error: not found: value GetGroundColor
        return GetGroundColor()
               ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
      if(!isFacingWall()){
      ^